start of total refactor services separation paste service
