# docs/swagger.json
@@ -89,7 +89,7 @@
                     "200": {
                         "description": "Successfully retrieved paste",
                         "schema": {
-                            "$ref": "#/definitions/v1.ListPastesOutput"
+                            "$ref": "#/definitions/service.ListPastesOutput"
                         }
                     },
                     "422": {
@@ -136,7 +136,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v1.CreatePasteInput"
+                            "$ref": "#/definitions/service.CreatePasteInput"
                         }
                     }
                 ],
@@ -144,7 +144,7 @@
                     "201": {
                         "description": "Successfully created paste",
                         "schema": {
-                            "$ref": "#/definitions/v1.PasteResp"
+                            "$ref": "#/definitions/service.PasteResp"
                         },
                         "headers": {
                             "Location": {
@@ -203,7 +203,7 @@
                     "200": {
                         "description": "Successfully retrieved paste",
                         "schema": {
-                            "$ref": "#/definitions/v1.PasteResp"
+                            "$ref": "#/definitions/service.PasteResp"
                         }
                     },
                     "404": {
@@ -309,7 +309,7 @@
                         "name": "body",
                         "in": "body",
                         "schema": {
-                            "$ref": "#/definitions/v1.UpdatePasteInput"
+                            "$ref": "#/definitions/service.UpdatePasteInput"
                         }
                     }
                 ],
@@ -317,7 +317,7 @@
                     "200": {
                         "description": "Successfully updated paste",
                         "schema": {
-                            "$ref": "#/definitions/v1.PasteResp"
+                            "$ref": "#/definitions/service.PasteResp"
                         }
                     },
                     "400": {
@@ -334,6 +334,12 @@
                     },
                     "404": {
                         "description": "Not found",
+                        "schema": {
+                            "$ref": "#/definitions/v1.ErrorResponse"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
                         "schema": {
                             "$ref": "#/definitions/v1.ErrorResponse"
                         }
@@ -395,13 +401,7 @@
                     "200": {
                         "description": "Successfully gave permission",
                         "schema": {
-                            "$ref": "#/definitions/v1.PastePermissionResponse"
-                        },
-                        "headers": {
-                            "Location": {
-                                "type": "string",
-                                "description": "URL of the newly created paste"
-                            }
+                            "$ref": "#/definitions/service.PastePermissionResponse"
                         }
                     },
                     "404": {
@@ -748,6 +748,9 @@
         "models.Paste": {
             "type": "object",
             "properties": {
+                "can_edit": {
+                    "type": "boolean"
+                },
                 "category": {
                     "type": "integer"
                 },
@@ -767,6 +770,17 @@
                     "type": "string"
                 },
                 "version": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.Permission": {
+            "type": "object",
+            "properties": {
+                "paste_id": {
+                    "type": "integer"
+                },
+                "user_id": {
                     "type": "integer"
                 }
             }
@@ -802,6 +816,70 @@
                 }
             }
         },
+        "service.CreatePasteInput": {
+            "type": "object",
+            "properties": {
+                "category": {
+                    "type": "integer"
+                },
+                "minutes": {
+                    "type": "integer"
+                },
+                "text": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "service.ListPastesOutput": {
+            "type": "object",
+            "properties": {
+                "metadata": {
+                    "$ref": "#/definitions/models.Metadata"
+                },
+                "pastes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Paste"
+                    }
+                }
+            }
+        },
+        "service.PastePermissionResponse": {
+            "type": "object",
+            "properties": {
+                "permission": {
+                    "$ref": "#/definitions/models.Permission"
+                }
+            }
+        },
+        "service.PasteResp": {
+            "type": "object",
+            "properties": {
+                "paste": {
+                    "$ref": "#/definitions/models.Paste"
+                }
+            }
+        },
+        "service.UpdatePasteInput": {
+            "type": "object",
+            "properties": {
+                "category": {
+                    "type": "integer"
+                },
+                "minutes": {
+                    "type": "integer"
+                },
+                "text": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
         "v1.ActivateUserInput": {
             "type": "object",
             "properties": {
@@ -829,23 +907,6 @@
                 }
             }
         },
-        "v1.CreatePasteInput": {
-            "type": "object",
-            "properties": {
-                "category": {
-                    "type": "integer"
-                },
-                "minutes": {
-                    "type": "integer"
-                },
-                "text": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                }
-            }
-        },
         "v1.ErrorResponse": {
             "type": "object",
             "properties": {
@@ -870,44 +931,6 @@
                             "type": "string"
                         }
                     }
-                }
-            }
-        },
-        "v1.ListPastesOutput": {
-            "type": "object",
-            "properties": {
-                "metadata": {
-                    "$ref": "#/definitions/models.Metadata"
-                },
-                "pastes": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Paste"
-                    }
-                }
-            }
-        },
-        "v1.PastePermissionResponse": {
-            "type": "object",
-            "properties": {
-                "permission": {
-                    "type": "object",
-                    "properties": {
-                        "paste_id": {
-                            "type": "integer"
-                        },
-                        "user_id": {
-                            "type": "integer"
-                        }
-                    }
-                }
-            }
-        },
-        "v1.PasteResp": {
-            "type": "object",
-            "properties": {
-                "paste": {
-                    "$ref": "#/definitions/models.Paste"
                 }
             }
         },
@@ -956,23 +979,6 @@
             "type": "object",
             "properties": {
                 "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "v1.UpdatePasteInput": {
-            "type": "object",
-            "properties": {
-                "category": {
-                    "type": "integer"
-                },
-                "minutes": {
-                    "type": "integer"
-                },
-                "text": {
-                    "type": "string"
-                },
-                "title": {
                     "type": "string"
                 }
             }
