# internal/repository/models/paste.go
@@ -1,7 +1,6 @@
 package models
 
 import (
-	"github.com/zhukovrost/pasteAPI/pkg/validator"
 	"time"
 )
 
@@ -14,18 +13,5 @@ type Paste struct {
 	ExpiresAt time.Time `json:"expires_at"`
 	Minutes   int32     `json:"-"`
 	Version   uint32    `json:"version"`
-}
-
-func ValidatePaste(v *validator.Validator, p *Paste) {
-	v.Check(p.Title != "", "title", "must be provided")
-	v.Check(len(p.Title) <= 255, "title", "must not be more than 500 bytes long")
-
-	v.Check(CategoriesList.IsValidCategory(p.Category), "category", "no such category")
-
-	v.Check(p.Text != "", "text", "must be provided")
-	v.Check(len(p.Title) <= 500, "title", "must not be more than 500 bytes long")
-}
-
-func ValidateTime(v *validator.Validator, p *Paste) {
-	v.Check(p.ExpiresAt.After(time.Now()), "expiration", "this paste is expired")
+	CanEdit   bool      `json:"can_edit"`
 }
